--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
 </head>
 
 <body>
@@ -22,5 +23,54 @@
         <div class="logo">
             <img src="images/logo/ohmyfood.png" alt="logo ohmyfood">
         </div>
+        <div class="location">
+            <i class="fa-solid fa-location-dot" aria-hidden="true"></i>
+            <p>Paris, Belleville</p>
+        </div>
     </header>
+    <main>
+        <section class="intro">
+            <div class="title-intro">
+                <p>Reservez le menu qui vous convient</p>
+            </div>
+            <div class="subtitle-intro">
+                <p>Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
+            </div>
+            <div class="button-intro">
+                <button type="button">Explorer nos restaurants</button>
+            </div>    
+        </section>
+        <section class="fonctionnement">
+            <div class="title-fonctionnement">
+                <p>Fonctionnement</p>
+            </div>
+            <div class="steps">
+                <div class="step">
+                    <p>1</p>
+                    <i class="fa-solid fa-mobile-screen-button" aria-hidden="true"></i>
+                    <p>Choisissez un restaurant</p>
+                </div>
+                <div class="step">
+                    <p>2</p>
+                    <i class="fa-solid fa-list" aria-hidden="true"></i>
+                    <p>Composez votre menu</p>
+                </div>
+                <div class="step">
+                    <p>3</p>
+                    <i class="fa-solid fa-store" aria-hidden="true"></i>
+                    <p>Dégustez votre menu</p>
+                </div>
+            </div>
+        <section class="restaurants">
+            <div class="title-restaurants">
+                <p>Restaurants</p>
+            </div>
+            <div class="cards-restaurants">
+                <div class="card">
+                    <img src="images/restaurants/jay-wennington-N_Y88TWxGwA-unsplash.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                    <div class="card-content">
+                        <div class="card-txt">
+                            <h3 class="card-title">La palette du gouf</h3>
+                            <p class="card-subtitle">Ménilmontant</p>
+    </main>
 </body>
