--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/header.css">
+    
 </head>
 
 <body>
@@ -25,16 +27,16 @@
         </div>
         <div class="location">
             <i class="fa-solid fa-location-dot" aria-hidden="true"></i>
-            <p>Paris, Belleville</p>
+            <h4>Paris, Belleville</h4>
         </div>
     </header>
     <main>
         <section class="intro">
             <div class="title-intro">
-                <p>Reservez le menu qui vous convient</p>
+                <h2>Reservez le menu qui vous convient</h2>
             </div>
             <div class="subtitle-intro">
-                <p>Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
+                <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
             </div>
             <div class="button-intro">
                 <button type="button">Explorer nos restaurants</button>
@@ -42,35 +44,110 @@
         </section>
         <section class="fonctionnement">
             <div class="title-fonctionnement">
-                <p>Fonctionnement</p>
+                <h2>Fonctionnement</h2>
             </div>
             <div class="steps">
                 <div class="step">
                     <p>1</p>
                     <i class="fa-solid fa-mobile-screen-button" aria-hidden="true"></i>
-                    <p>Choisissez un restaurant</p>
+                    <h4>Choisissez un restaurant</h4>
                 </div>
                 <div class="step">
                     <p>2</p>
                     <i class="fa-solid fa-list" aria-hidden="true"></i>
-                    <p>Composez votre menu</p>
+                    <h4>Composez votre menu</h4>
                 </div>
                 <div class="step">
                     <p>3</p>
                     <i class="fa-solid fa-store" aria-hidden="true"></i>
-                    <p>Dégustez votre menu</p>
+                    <h4>Dégustez votre menu</h4>
                 </div>
             </div>
         <section class="restaurants">
             <div class="title-restaurants">
-                <p>Restaurants</p>
+                <h2>Restaurants</h2>
             </div>
             <div class="cards-restaurants">
-                <div class="card">
-                    <img src="images/restaurants/jay-wennington-N_Y88TWxGwA-unsplash.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                    <div class="card-content">
-                        <div class="card-txt">
-                            <h3 class="card-title">La palette du gouf</h3>
-                            <p class="card-subtitle">Ménilmontant</p>
+                <a class="card">
+                    <article>    
+                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                        <div class="new">
+                            <p>Nouveau</p>
+                        </div>
+                         <div class="card-content">
+                            <div class="card-txt">
+                                <h3 class="card-title">La palette du goût</h3>
+                                <p class="card-subtitle">Ménilmontant</p>
+                            </div>
+                        </div>
+                        <div class="card-like">
+                            <i class="fa-regular fa-heart" aria-hidden="true"></i>
+                            <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                        </div>
+                    </article>
+                </a>
+                <a class="card">
+                    <article>    
+                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                        <div class="new">
+                             <p>Nouveau</p>
+                        </div>
+                        <div class="card-content">
+                            <div class="card-txt">
+                                <h3 class="card-title">La note enchantée</h3>
+                                <p class="card-subtitle">Charonne</p>
+                            </div>
+                        </div>
+                        <div class="card-like">
+                            <i class="fa-regular fa-heart" aria-hidden="true"></i>
+                            <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                        </div>
+                    </article>
+                </a>
+                <a class="card">
+                    <article>    
+                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                        <div class="card-content">
+                            <div class="card-txt">
+                                <h3 class="card-title">À la francaise</h3>
+                                <p class="card-subtitle">Cité Rouge</p>
+                            </div>
+                        </div>
+                        <div class="card-like">
+                            <i class="fa-regular fa-heart" aria-hidden="true"></i>
+                            <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                        </div>
+                    </article>
+                </a>
+                <a class="card">
+                    <article>    
+                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                        <div class="card-content">
+                            <div class="card-txt">
+                                <h3 class="card-title">Le délice des sens</h3>
+                                <p class="card-subtitle">Folie-Méricourt</p>
+                            </div>
+                        </div>
+                        <div class="card-like">
+                            <i class="fa-regular fa-heart" aria-hidden="true"></i>
+                            <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                        </div>
+                    </article>
+                </a>
+            </div>
+        </section>
     </main>
+    <footer>
+        <div class="title-footer">
+            <h1>ohmyfood</h1>
+        </div>
+        <div class="menu-footer">
+            <ul>
+                <li><i class="fa-solid fa-utensils" aria-hidden="true"></i>Proposer un restaurant</li>
+                <li><i class="fa-solid fa-handshake-angle" aria-hidden="true"></i>Devenir partenaire</li>
+                <li>Mentions légales</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+    </footer>
 </body>
