--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <main>
         <section class="intro">
-            <div class="title-intro">
+            <div class="intro-title">
                 <h2>Reservez le menu qui vous convient</h2>
             </div>
             <div class="subtitle-intro">
