--- a/index.html
+++ b/index.html
@@ -32,37 +32,50 @@
     </header>
     <main>
         <section class="intro">
-            <div class="intro-title">
+            <div class="intro__title">
                 <h2>Reservez le menu qui vous convient</h2>
             </div>
-            <div class="subtitle-intro">
+            <div class="intro__subtitle">
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
             </div>
-            <div class="button-intro">
+            <div class="intro__button">
                 <button type="button">Explorer nos restaurants</button>
             </div>    
         </section>
-        <section class="fonctionnement">
-            <div class="title-fonctionnement">
+        <section class="function">
+            <div class="function__title">
                 <h2>Fonctionnement</h2>
             </div>
-            <div class="steps">
-                <div class="step">
-                    <p>1</p>
-                    <i class="fa-solid fa-mobile-screen-button" aria-hidden="true"></i>
-                    <h4>Choisissez un restaurant</h4>
+            <div class="function__steps">
+                <div class="__step">
+                    <div class="circle">
+                        1
+                    </div>
+                    <div class="step__border">
+                        <i class="fa-solid fa-mobile-screen-button" aria-hidden="true"></i>
+                        <h4>Choisissez un restaurant</h4>
+                    </div>
                 </div>
-                <div class="step">
-                    <p>2</p>
-                    <i class="fa-solid fa-list" aria-hidden="true"></i>
-                    <h4>Composez votre menu</h4>
+                <div class="__step">
+                    <div class="circle">
+                        2
+                    </div>
+                    <div class="step__border"> 
+                        <i class="fa-solid fa-list" aria-hidden="true"></i>
+                        <h4>Composez votre menu</h4>
+                    </div>
                 </div>
-                <div class="step">
-                    <p>3</p>
-                    <i class="fa-solid fa-store" aria-hidden="true"></i>
-                    <h4>Dégustez votre menu</h4>
+                <div class="__step">
+                    <div class="circle">
+                        3
+                    </div>
+                    <div class="step__border">
+                        <i class="fa-solid fa-store" aria-hidden="true"></i>
+                        <h4>Dégustez votre menu</h4>
+                    </div>
                 </div>
             </div>
+        </section>
         <section class="restaurants">
             <div class="title-restaurants">
                 <h2>Restaurants</h2>
