--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
             </div>
             <div class="intro__button">
-                <button type="button">Explorer nos restaurants</button>
+                <a class="link__button" href="#">
+                    Explorer nos restaurants
+                </a>
             </div>    
         </section>
         <section class="function">
@@ -48,28 +50,28 @@
             </div>
             <div class="function__steps">
                 <div class="__step">
-                    <div class="circle">
-                        1
-                    </div>
                     <div class="step__border">
+                        <div class="circle">
+                            1
+                        </div>
                         <i class="fa-solid fa-mobile-screen-button" aria-hidden="true"></i>
                         <h4>Choisissez un restaurant</h4>
                     </div>
                 </div>
                 <div class="__step">
-                    <div class="circle">
-                        2
-                    </div>
                     <div class="step__border"> 
+                        <div class="circle">
+                            2
+                        </div>
                         <i class="fa-solid fa-list" aria-hidden="true"></i>
                         <h4>Composez votre menu</h4>
                     </div>
                 </div>
                 <div class="__step">
-                    <div class="circle">
-                        3
-                    </div>
                     <div class="step__border">
+                        <div class="circle">
+                            3
+                        </div>
                         <i class="fa-solid fa-store" aria-hidden="true"></i>
                         <h4>Dégustez votre menu</h4>
                     </div>
@@ -77,23 +79,23 @@
             </div>
         </section>
         <section class="restaurants">
-            <div class="title-restaurants">
+            <div class="restaurants__title">
                 <h2>Restaurants</h2>
             </div>
-            <div class="cards-restaurants">
+            <div class="restaurants__cards">
                 <a class="card">
                     <article>    
                         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                         <div class="new">
                             <p>Nouveau</p>
                         </div>
-                         <div class="card-content">
-                            <div class="card-txt">
-                                <h3 class="card-title">La palette du goût</h3>
-                                <p class="card-subtitle">Ménilmontant</p>
+                         <div class="card__content">
+                            <div class="card__txt">
+                                <h3 class="card__title">La palette du goût</h3>
+                                <p class="card__subtitle">Ménilmontant</p>
                             </div>
                         </div>
-                        <div class="card-like">
+                        <div class="card__like">
                             <i class="fa-regular fa-heart" aria-hidden="true"></i>
                             <i class="fa-solid fa-heart" aria-hidden="true"></i>
                         </div>
