--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
     
 </head>
 
@@ -153,16 +154,18 @@
         </section>
     </main>
     <footer>
-        <div class="title-footer">
+        <div class="footer__title">
             <h1>ohmyfood</h1>
         </div>
-        <div class="menu-footer">
-            <ul>
-                <li><i class="fa-solid fa-utensils" aria-hidden="true"></i>Proposer un restaurant</li>
-                <li><i class="fa-solid fa-handshake-angle" aria-hidden="true"></i>Devenir partenaire</li>
-                <li>Mentions légales</li>
-                <li>Contact</li>
-            </ul>
+        <div class="footer__menu">
+            <div class="footer__icon"> 
+                <i class="fa-solid fa-utensils" aria-hidden="true"></i>Proposer un restaurant
+            </div>
+            <div class="footer__icon">
+                <i class="fa-solid fa-handshake-angle" aria-hidden="true"></i>Devenir partenaire
+            </div>
+            <p>Mentions légales</p>
+            <p>Contact</p>
         </div>
     </footer>
 </body>
