Modification in html
modification in html for function et restaurants

--- a/index.html
+++ b/index.html
@@ -46,110 +46,100 @@
             </div>    
         </section>
         <section class="function">
-            <div class="function__title">
+            <div class="function__all">
                 <h2>Fonctionnement</h2>
-            </div>
-            <div class="function__steps">
-                <div class="__step">
-                    <div class="step__border">
-                        <div class="circle">
-                            1
-                        </div>
-                        <i class="fa-solid fa-mobile-screen-button" aria-hidden="true"></i>
-                        <h4>Choisissez un restaurant</h4>
-                    </div>
+                <div class="step">
+                    <div class="circle">
+                         1
+                     </div>
+                    <i class="fa-solid fa-mobile-screen-button" aria-hidden="true"></i>
+                    <h4>Choisissez un restaurant</h4>
                 </div>
-                <div class="__step">
-                    <div class="step__border"> 
-                        <div class="circle">
-                            2
-                        </div>
-                        <i class="fa-solid fa-list" aria-hidden="true"></i>
-                        <h4>Composez votre menu</h4>
+               <div class="step"> 
+                    <div class="circle">
+                        2
                     </div>
+                    <i class="fa-solid fa-list" aria-hidden="true"></i>
+                    <h4>Composez votre menu</h4>
                 </div>
-                <div class="__step">
-                    <div class="step__border">
-                        <div class="circle">
-                            3
-                        </div>
-                        <i class="fa-solid fa-store" aria-hidden="true"></i>
-                        <h4>Dégustez votre menu</h4>
+                <div class="step">
+                    <div class="circle">
+                        3
                     </div>
-                </div>
-            </div>
+                    <i class="fa-solid fa-store" aria-hidden="true"></i>
+                    <h4>Dégustez votre menu</h4>
+               </div>
+           </div>
         </section>
         <section class="restaurants">
-            <div class="restaurants__title">
-                <h2>Restaurants</h2>
-            </div>
-            <div class="restaurants__cards">
-                <a class="card">
-                    <article>    
-                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                        <div class="new">
-                            <p>Nouveau</p>
-                        </div>
-                         <div class="card__content">
-                            <div class="card__txt">
-                                <h3 class="card__title">La palette du goût</h3>
-                                <p class="card__subtitle">Ménilmontant</p>
+            <div class="restaurants__all">
+                <h2 class="restaurants__title">Restaurants</h2>
+                <div class="restaurants__cards">
+                    <a class="card">
+                        <article>    
+                            <div class="restaurants__img--first">
+                                <p class="new">Nouveau</p>
                             </div>
-                        </div>
-                        <div class="card__like">
-                            <i class="fa-regular fa-heart" aria-hidden="true"></i>
-                            <i class="fa-solid fa-heart" aria-hidden="true"></i>
-                        </div>
-                    </article>
-                </a>
-                <a class="card">
-                    <article>    
-                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                        <div class="new">
-                             <p>Nouveau</p>
-                        </div>
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h3 class="card-title">La note enchantée</h3>
-                                <p class="card-subtitle">Charonne</p>
+                            <div class="card__content">
+                                <div class="card__txt">
+                                    <h3 class="card__title">La palette du goût</h3>
+                                    <p class="card__subtitle">Ménilmontant</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="card-like">
-                            <i class="fa-regular fa-heart" aria-hidden="true"></i>
-                            <i class="fa-solid fa-heart" aria-hidden="true"></i>
-                        </div>
-                    </article>
-                </a>
-                <a class="card">
-                    <article>    
-                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h3 class="card-title">À la francaise</h3>
-                                <p class="card-subtitle">Cité Rouge</p>
+                            <div class="card__like">
+                                <i class="fa-regular fa-heart" aria-hidden="true"></i>
+                                <i class="fa-solid fa-heart" aria-hidden="true"></i>
                             </div>
-                        </div>
-                        <div class="card-like">
-                            <i class="fa-regular fa-heart" aria-hidden="true"></i>
-                            <i class="fa-solid fa-heart" aria-hidden="true"></i>
-                        </div>
-                    </article>
-                </a>
-                <a class="card">
-                    <article>    
-                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h3 class="card-title">Le délice des sens</h3>
-                                <p class="card-subtitle">Folie-Méricourt</p>
+                        </article>
+                    </a>
+                    <a class="card">
+                        <article>    
+                            <div class="restaurants__img--second">
+                                <p class="new">Nouveau</p>
                             </div>
-                        </div>
-                        <div class="card-like">
-                            <i class="fa-regular fa-heart" aria-hidden="true"></i>
-                            <i class="fa-solid fa-heart" aria-hidden="true"></i>
-                        </div>
-                    </article>
-                </a>
+                            <div class="card-content">
+                                <div class="card-txt">
+                                    <h3 class="card-title">La note enchantée</h3>
+                                    <p class="card-subtitle">Charonne</p>
+                                </div>
+                            </div>
+                            <div class="card-like">
+                                <i class="fa-regular fa-heart" aria-hidden="true"></i>
+                                <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                            </div>
+                        </article>
+                    </a>
+                    <a class="card">
+                        <article>    
+                            <img class="restaurants__img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                            <div class="card-content">
+                                <div class="card-txt">
+                                    <h3 class="card-title">À la francaise</h3>
+                                    <p class="card-subtitle">Cité Rouge</p>
+                                </div>
+                            </div>
+                            <div class="card-like">
+                                <i class="fa-regular fa-heart" aria-hidden="true"></i>
+                                <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                            </div>
+                        </article>
+                    </a>
+                    <a class="card">
+                        <article>    
+                            <img class="restaurants__img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                            <div class="card-content">
+                                <div class="card-txt">
+                                    <h3 class="card-title">Le délice des sens</h3>
+                                    <p class="card-subtitle">Folie-Méricourt</p>
+                                </div>
+                            </div>
+                            <div class="card-like">
+                                <i class="fa-regular fa-heart" aria-hidden="true"></i>
+                                <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                            </div>
+                        </article>
+                    </a>
+                </div>
             </div>
         </section>
     </main>
