--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                                     <h3 class="card__title">La palette du goût</h3>
                                     <p class="card__subtitle">Ménilmontant</p>
                                 </div>
-                            </div>
-                            <div class="card__like">
-                                <i class="fa-regular fa-heart" aria-hidden="true"></i>
-                                <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                                <div class="card__like">
+                                    <i class="fa-regular fa-heart" aria-hidden="true"></i>
+                                    <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                                </div>
                             </div>
                         </article>
                     </a>
@@ -97,45 +97,45 @@
                             <div class="restaurants__img--second">
                                 <p class="new">Nouveau</p>
                             </div>
-                            <div class="card-content">
-                                <div class="card-txt">
-                                    <h3 class="card-title">La note enchantée</h3>
-                                    <p class="card-subtitle">Charonne</p>
+                            <div class="card__content">
+                                <div class="card__txt">
+                                    <h3 class="card__title">La note enchantée</h3>
+                                    <p class="card__subtitle">Charonne</p>
                                 </div>
-                            </div>
-                            <div class="card-like">
-                                <i class="fa-regular fa-heart" aria-hidden="true"></i>
-                                <i class="fa-solid fa-heart" aria-hidden="true"></i>
-                            </div>
+                                <div class="card__like">
+                                    <i class="fa-regular fa-heart" aria-hidden="true"></i>
+                                    <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                                </div>
+                            </div>  
                         </article>
                     </a>
                     <a class="card">
                         <article>    
                             <img class="restaurants__img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                            <div class="card-content">
-                                <div class="card-txt">
-                                    <h3 class="card-title">À la francaise</h3>
-                                    <p class="card-subtitle">Cité Rouge</p>
+                            <div class="card__content">
+                                <div class="card__txt">
+                                    <h3 class="card__title">À la francaise</h3>
+                                    <p class="card__subtitle">Cité Rouge</p>
                                 </div>
-                            </div>
-                            <div class="card-like">
-                                <i class="fa-regular fa-heart" aria-hidden="true"></i>
-                                <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                                <div class="card__like">
+                                    <i class="fa-regular fa-heart" aria-hidden="true"></i>
+                                    <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                                </div>
                             </div>
                         </article>
                     </a>
                     <a class="card">
                         <article>    
                             <img class="restaurants__img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                            <div class="card-content">
-                                <div class="card-txt">
-                                    <h3 class="card-title">Le délice des sens</h3>
-                                    <p class="card-subtitle">Folie-Méricourt</p>
+                            <div class="card__content">
+                                <div class="card__txt">
+                                    <h3 class="card__title">Le délice des sens</h3>
+                                    <p class="card__subtitle">Folie-Méricourt</p>
                                 </div>
-                            </div>
-                            <div class="card-like">
-                                <i class="fa-regular fa-heart" aria-hidden="true"></i>
-                                <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                                <div class="card__like">
+                                    <i class="fa-regular fa-heart" aria-hidden="true"></i>
+                                    <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                                </div>
                             </div>
                         </article>
                     </a>
