--- a/index.html
+++ b/index.html
@@ -148,14 +148,10 @@
             <h1>ohmyfood</h1>
         </div>
         <div class="footer__menu">
-            <div class="footer__icon"> 
-                <i class="fa-solid fa-utensils" aria-hidden="true"></i>Proposer un restaurant
-            </div>
-            <div class="footer__icon">
-                <i class="fa-solid fa-handshake-angle" aria-hidden="true"></i>Devenir partenaire
-            </div>
-            <p>Mentions légales</p>
-            <p>Contact</p>
+            <a><span class="footer__icon"><i class="fa-solid fa-utensils" aria-hidden="true"></i></span>Proposer un restaurant</a>
+            <a><span class="footer__icon--handshake"><i class="fa-solid fa-handshake-angle" aria-hidden="true"></i></span>Devenir partenaire</a>
+            <a>Mentions légales</a>
+            <a>Contact</a>
         </div>
     </footer>
 </body>
