--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/style.css">
     
 </head>
 
@@ -75,7 +75,7 @@
             <div class="restaurants__all">
                 <h2 class="restaurants__title">Restaurants</h2>
                 <div class="restaurants__cards">
-                    <a class="card">
+                    <a href="#" class="card">
                         <article>    
                             <div class="restaurants__img--first">
                                 <p class="new">Nouveau</p>
@@ -92,7 +92,7 @@
                             </div>
                         </article>
                     </a>
-                    <a class="card">
+                    <a href="#" class="card">
                         <article>    
                             <div class="restaurants__img--second">
                                 <p class="new">Nouveau</p>
@@ -109,7 +109,7 @@
                             </div>  
                         </article>
                     </a>
-                    <a class="card">
+                    <a href="#" class="card">
                         <article>    
                             <img class="restaurants__img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                             <div class="card__content">
@@ -124,7 +124,7 @@
                             </div>
                         </article>
                     </a>
-                    <a class="card">
+                    <a href="#" class="card">
                         <article>    
                             <img class="restaurants__img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                             <div class="card__content">
@@ -148,10 +148,10 @@
             <h1>ohmyfood</h1>
         </div>
         <div class="footer__menu">
-            <a><span class="footer__icon"><i class="fa-solid fa-utensils" aria-hidden="true"></i></span>Proposer un restaurant</a>
-            <a><span class="footer__icon--handshake"><i class="fa-solid fa-handshake-angle" aria-hidden="true"></i></span>Devenir partenaire</a>
-            <a>Mentions légales</a>
-            <a>Contact</a>
+            <a href="#" class="footer__link"><span class="footer__icon"><i class="fa-solid fa-utensils" aria-hidden="true"></i></span>Proposer un restaurant</a>
+            <a href="#" class="footer__link"><span class="footer__icon--handshake"><i class="fa-solid fa-handshake-angle" aria-hidden="true"></i></span>Devenir partenaire</a>
+            <a href="#" class="footer__link">Mentions légales</a>
+            <a href="#" class="footer__link">Contact</a>
         </div>
     </footer>
 </body>
