like feature changed
trying to fix the like

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <i class="fa-solid fa-location-dot" aria-hidden="true"></i>
             <h4>Paris, Belleville</h4>
         </div>
-    </header>
+    </header> 
     <main>
         <section class="intro">
             <div class="intro__title">
@@ -86,7 +86,6 @@
                                     <p class="card__subtitle">Ménilmontant</p>
                                 </div>
                                 <div class="card__like">
-                                    <i class="fa-regular fa-heart" aria-hidden="true"></i>
                                     <i class="fa-solid fa-heart" aria-hidden="true"></i>
                                 </div>
                             </div>
@@ -103,7 +102,6 @@
                                     <p class="card__subtitle">Charonne</p>
                                 </div>
                                 <div class="card__like">
-                                    <i class="fa-regular fa-heart" aria-hidden="true"></i>
                                     <i class="fa-solid fa-heart" aria-hidden="true"></i>
                                 </div>
                             </div>  
@@ -118,8 +116,8 @@
                                     <p class="card__subtitle">Cité Rouge</p>
                                 </div>
                                 <div class="card__like">
-                                    <i class="fa-regular fa-heart" aria-hidden="true"></i>
-                                    <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                                    <i class="fa-regular fa-heart fa-lg heart" aria-hidden="true"></i>
+                                    <i class="fa-solid fa-heart fa-lg heart" aria-hidden="true"></i>
                                 </div>
                             </div>
                         </article>
@@ -133,8 +131,7 @@
                                     <p class="card__subtitle">Folie-Méricourt</p>
                                 </div>
                                 <div class="card__like">
-                                    <i class="fa-regular fa-heart" aria-hidden="true"></i>
-                                    <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                                    <img src="images/Like/like.svg" alt="coeur">
                                 </div>
                             </div>
                         </article>
