--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
                                     <h3 class="card__title">La palette du goût</h3>
                                     <p class="card__subtitle">Ménilmontant</p>
                                 </div>
-                                <div class="card__like">
-                                    <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                                <div class="card__like">                       
+                                    <i class="fa-regular fa-heart fa-lg heart"></i>
+                                    <i class="fa-solid fa-heart fa-lg heart"></i>                                   
                                 </div>
                             </div>
                         </article>
@@ -102,7 +103,8 @@
                                     <p class="card__subtitle">Charonne</p>
                                 </div>
                                 <div class="card__like">
-                                    <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                                    <i class="fa-regular fa-heart fa-lg heart" aria-hidden="true"></i>
+                                    <i class="fa-solid fa-heart fa-lg heart" aria-hidden="true"></i>
                                 </div>
                             </div>  
                         </article>
@@ -131,7 +133,8 @@
                                     <p class="card__subtitle">Folie-Méricourt</p>
                                 </div>
                                 <div class="card__like">
-                                    <img src="images/Like/like.svg" alt="coeur">
+                                    <i class="fa-regular fa-heart fa-lg heart" aria-hidden="true"></i>
+                                    <i class="fa-solid fa-heart fa-lg heart" aria-hidden="true"></i>
                                 </div>
                             </div>
                         </article>
