Desktop version not finished

--- a/index.html
+++ b/index.html
@@ -48,27 +48,29 @@
         <section class="function">
             <div class="function__all">
                 <h2>Fonctionnement</h2>
-                <div class="step">
-                    <div class="circle">
-                         1
-                     </div>
-                    <i class="fa-solid fa-mobile-screen-button" aria-hidden="true"></i>
-                    <h4>Choisissez un restaurant</h4>
-                </div>
-               <div class="step"> 
-                    <div class="circle">
-                        2
+                <div class="function__steps">
+                    <div class="step">
+                        <div class="circle">
+                            1
+                        </div>
+                        <i class="fa-solid fa-mobile-screen-button" aria-hidden="true"></i>
+                        <h4>Choisissez un restaurant</h4>
                     </div>
-                    <i class="fa-solid fa-list" aria-hidden="true"></i>
-                    <h4>Composez votre menu</h4>
-                </div>
-                <div class="step">
-                    <div class="circle">
-                        3
+                    <div class="step"> 
+                        <div class="circle">
+                            2
+                        </div>
+                        <i class="fa-solid fa-list" aria-hidden="true"></i>
+                        <h4>Composez votre menu</h4>
                     </div>
-                    <i class="fa-solid fa-store" aria-hidden="true"></i>
-                    <h4>Dégustez votre menu</h4>
-               </div>
+                    <div class="step">
+                        <div class="circle">
+                            3
+                        </div>
+                        <i class="fa-solid fa-store" aria-hidden="true"></i>
+                        <h4>Dégustez votre menu</h4>
+                    </div>
+                </div>    
            </div>
         </section>
         <section class="restaurants">
