--- a/index.html
+++ b/index.html
@@ -149,9 +149,11 @@
         <div class="footer__title">
             <h1>ohmyfood</h1>
         </div>
-        <div class="footer__menu">
+         <div class="footer__links">
             <a href="#" class="footer__link"><span class="footer__icon"><i class="fa-solid fa-utensils" aria-hidden="true"></i></span>Proposer un restaurant</a>
             <a href="#" class="footer__link"><span class="footer__icon--handshake"><i class="fa-solid fa-handshake-angle" aria-hidden="true"></i></span>Devenir partenaire</a>
+        </div>
+        <div class="footer__links">
             <a href="#" class="footer__link">Mentions légales</a>
             <a href="#" class="footer__link">Contact</a>
         </div>
